--- a/biblioteca_digital/views/templates/materiales/modificacion_materiales.html
+++ b/biblioteca_digital/views/templates/materiales/modificacion_materiales.html
@@ -276,7 +276,14 @@
 </div>
 
  <!-- Tabla para mostrar los libros -->
- <div class="tabla-container mt-4">
+ <div class="tabla-container mt-4git reset HEAD materiales/migrations/0001_initial.py materiales/migrations/0002_inventario_delete_autor_delete_libros_libro_mapas_and_more.py materiales/migrations/0003_remove_libro_cdu_libro_codigo_materia_and_more.py materiales/migrations/0004_libro_edicion.py materiales/migrations/0005_inventario_imagen_rota.py materiales/migrations/0006_alter_inventario_estado.py materiales/migrations/0007_alter_mapas_id_mapa_alter_multimedia_id_multi_and_more.py
+ git add materiales/migrations/0001_initial.py
+ git commit -m "chore: limpieza y actualización de migraciones de materiales
+ 
+ - Eliminación de migraciones antiguas innecesarias
+ - Actualización de la migración inicial para reflejar el nuevo estado del modelo
+ 
+ BREAKING CHANGE: Es necesario revisar la base de datos antes de desplegar en producción."">
     <table class="libros-table">
         <thead>
             <tr>
